force-app/main/default/objects/Events__c/fields/approval_request_submitted_time__c.field-meta.xml
<CustomField>
    <fullName>approval_request_submitted_time__c</fullName>
    <label>approval request submitted time</label>
    <type>DateTime</type>
</CustomField>