force-app/main/default/objects/Events__c/fields/Brief_on_city_country__c.field-meta.xml
<CustomField>
    <fullName>Brief_on_city_country__c</fullName>
    <label>Brief on city/country</label>
    <type>TextArea</type>
</CustomField>