force-app/main/default/objects/Events__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>