force-app/main/default/objects/Events__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <formula>Text(Date_Of_Event__c)+&apos;/&apos;+TEXT(City_Country__c)+&apos;/&apos;+ RecordType.Name +&apos;/&apos;+IF( Channel_Partner__c !=null,Channel_Partner__r.Name,Sobha_Connect__r.Name)</formula>
    <label>Campaign Code</label>
    <type>Text</type>
</CustomField>