force-app/main/default/objects/Events__c/fields/Campaign_Lead_7_days_before_event__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Lead_7_days_before_event__c</fullName>
    <description>SOB-1655</description>
    <label>Campaign Lead 7 days before event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>