force-app/main/default/objects/Events__c/fields/Campaign_Leads__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Leads__c</fullName>
    <label>Campaign Lead 15 days before event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>