force-app/main/default/objects/Events__c/fields/City_3__c.field-meta.xml
<CustomField>
    <fullName>City_3__c</fullName>
    <label>City 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Abuja</fullName>
            </value>
            <value>
                <fullName>Addis Ababa</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Al Ain</fullName>
            </value>
            <value>
                <fullName>Alger</fullName>
            </value>
            <value>
                <fullName>Almaty</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
            <value>
                <fullName>Astana</fullName>
            </value>
            <value>
                <fullName>Baghdad</fullName>
            </value>
            <value>
                <fullName>Baku</fullName>
            </value>
            <value>
                <fullName>bandar abbas</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bangkok</fullName>
            </value>
            <value>
                <fullName>Basel</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>BEIRUT</fullName>
            </value>
            <value>
                <fullName>Belgrade</fullName>
            </value>
            <value>
                <fullName>BERLIN</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bishkek</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Brussels</fullName>
            </value>
            <value>
                <fullName>Bucharest</fullName>
            </value>
            <value>
                <fullName>Bursa</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>CALGARY</fullName>
            </value>
            <value>
                <fullName>Cannes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>