force-app/main/default/objects/Events__c/fields/Collateral_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Uploaded</label>
    <type>Checkbox</type>
</CustomField>