force-app/main/default/objects/Events__c/fields/Confirmed_Meeting_Before_2_days__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Meeting_Before_2_days__c</fullName>
    <label>Confirmed Meeting Before 2 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>