force-app/main/default/objects/Events__c/fields/Confirmed_No_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_No_of_Meeting__c</fullName>
    <label>Confirmed No. of Meeting</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>