force-app/main/default/objects/Events__c/fields/Cost_of_Event_Hall__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Event_Hall__c</fullName>
    <label>Cost of Event Hall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>