force-app/main/default/objects/Events__c/fields/Country_3__c.field-meta.xml
<CustomField>
    <fullName>Country_3__c</fullName>
    <label>Country 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Democratic Republic of Congo</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Egypt</fullName>
            </value>
            <value>
                <fullName>UNITED KINGDOM</fullName>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>HONG KONG</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
            <value>
                <fullName>IRAQ</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>kasakhstan</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>KSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>