force-app/main/default/objects/Events__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
                <label>AUSTRALIA</label>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
                <label>CANADA</label>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Democratic Republic of Congo</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>egypt</fullName>
                <label>Egypt</label>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
                <label>GERMANY</label>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
                <label>HONG KONG</label>
            </value>
            <value>
                <fullName>India</fullName>
                <label>INDIA</label>
            </value>
            <value>
                <fullName>Indonesia</fullName>
                <label>INDONESIA</label>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
                <label>IRAQ</label>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>Kazakhstan</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>KSA</fullName>
            </value>
            <value>
                <fullName>Kuwait</fullName>
            </value>
            <value>
                <fullName>Kyrgyzstan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>