force-app/main/default/objects/Events__c/fields/Current_user_is_sales_manager__c.field-meta.xml
<CustomField>
    <fullName>Current_user_is_sales_manager__c</fullName>
    <formula>Contains($UserRole.Name ,&quot;Sales Manager&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current user is sales manager?</label>
    <type>Checkbox</type>
</CustomField>