force-app/main/default/objects/Events__c/fields/Date_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Event__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>