force-app/main/default/objects/Events__c/fields/Date_of_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Proposal__c</fullName>
    <formula>CreatedDate</formula>
    <label>Date Of Proposal</label>
    <type>Date</type>
</CustomField>