force-app/main/default/objects/Events__c/fields/email_flag__c.field-meta.xml
<CustomField>
    <fullName>email_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>email flag</label>
    <type>Checkbox</type>
</CustomField>