force-app/main/default/objects/Events__c/fields/Email_Last_Triggered_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Triggered_Time__c</fullName>
    <label>Email Last Triggered Time</label>
    <type>DateTime</type>
</CustomField>