force-app/main/default/objects/Events__c/fields/End_Date_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Of_Event__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>