force-app/main/default/objects/Events__c/fields/End_Time_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>End_Time_of_the_Event__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>