force-app/main/default/objects/Events__c/fields/Escalation_Email_CHRM_Campaign_leads__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Email_CHRM_Campaign_leads__c</fullName>
    <label>Escalation Email CHRM - Campaign leads</label>
    <type>DateTime</type>
</CustomField>