force-app/main/default/objects/Events__c/fields/Event_Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Event_Approval_status__c</fullName>
    <label>Event Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>