force-app/main/default/objects/Events__c/fields/Event_Approved_status__c.field-meta.xml
<CustomField>
    <fullName>Event_Approved_status__c</fullName>
    <label>Event approval status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The event has been Submitted for the Invoice Raise Approval</fullName>
            </value>
            <value>
                <fullName>The event has been Approved for the Invoice Raise</fullName>
            </value>
            <value>
                <fullName>The event has been Rejected before the Invoice Raise</fullName>
            </value>
            <value>
                <fullName>The event has been Submitted for the after Invoice Raise Approval to CP Head</fullName>
            </value>
            <value>
                <fullName>After Invoice Raise Approved by CP Head</fullName>
            </value>
            <value>
                <fullName>The event has been Submitted for the after Invoice Raise Rejected by CP Head</fullName>
            </value>
            <value>
                <fullName>The event has been Submitted for the after Invoice Raise Approval  for CSO</fullName>
            </value>
            <value>
                <fullName>The event has been approved by Manish Goenka</fullName>
            </value>
            <value>
                <fullName>The event has been rejected by Manish Goenka</fullName>
            </value>
            <value>
                <fullName>The event has been approved by Sales Director</fullName>
            </value>
            <value>
                <fullName>The event has been rejected by Sales Director</fullName>
            </value>
            <value>
                <fullName>The event has been approved by Channel Relationship Manager</fullName>
                <label>The event has been approved by CHRM manager</label>
            </value>
            <value>
                <fullName>The event has been rejected by Channel Relationship Manager</fullName>
                <label>The event has been rejected by CHRM manager</label>
            </value>
            <value>
                <fullName>The event has been approved by Channel Relationship Head</fullName>
                <label>The event has been approved by CHRM manager TL</label>
            </value>
            <value>
                <fullName>The event has been rejected by Channel Relationship Head</fullName>
                <label>The event has been rejected by CHRM manager TL</label>
            </value>
            <value>
                <fullName>The event has been approved by Avin Anil</fullName>
                <label>The event has been approved by Maria</label>
            </value>
            <value>
                <fullName>The event has been rejected by Avin Anil</fullName>
                <label>The event has been rejected by Maria</label>
            </value>
            <value>
                <fullName>The event has been approved by Ashish Parakh</fullName>
            </value>
            <value>
                <fullName>The event has been rejected by Ashish Parakh</fullName>
            </value>
            <value>
                <fullName>The event has been approved by GM Hospitality</fullName>
            </value>
            <value>
                <fullName>The event has been rejected by GM Hospitality</fullName>
            </value>
            <value>
                <fullName>This event has been submitted by GM after invoice approval</fullName>
            </value>
            <value>
                <fullName>The event has been approved by CRM OPs after Invoice Approval</fullName>
            </value>
            <value>
                <fullName>Pending With Sales Director</fullName>
            </value>
            <value>
                <fullName>Pending With VP</fullName>
            </value>
            <value>
                <fullName>Pending With CHRM manager</fullName>
            </value>
            <value>
                <fullName>Pending With CHRM manager TL</fullName>
            </value>
            <value>
                <fullName>Pending With Avin Anil</fullName>
                <label>Pending With Maria</label>
            </value>
            <value>
                <fullName>Pending With Ashish Parakh</fullName>
            </value>
            <value>
                <fullName>Pending With Manish Goenka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>