force-app/main/default/objects/Events__c/fields/Event_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Event_Sales_Value__c</fullName>
    <label>Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>