force-app/main/default/objects/Events__c/fields/Expected_Closure__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closure__c</fullName>
    <label>Expected Closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>