force-app/main/default/objects/Events__c/fields/Expected_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Expected_Meetings__c</fullName>
    <label>Expected Meetings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>