force-app/main/default/objects/Events__c/fields/Expected_number_of_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Expected_number_of_Visitors__c</fullName>
    <label>Expected no. of Visitor/Meetings per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>