force-app/main/default/objects/Events__c/fields/Final_Event_Approval_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Final_Event_Approval_Status_Formula__c</fullName>
    <formula>If(OR(ISPICKVAL(Final_Event_Approval_Status__c,&quot;Cancel&quot;),ISPICKVAL(Final_Event_Approval_Status__c ,&quot;Postponed&quot;)),
Text(Final_Event_Approval_Status__c),
if(OR(AND(Date_Of_Event__c &lt;today(),isblank(End_Date_Of_Event__c)),AND(Not(isblank(End_Date_Of_Event__c)), Date_Of_Event__c &lt;today() , End_Date_Of_Event__c&lt;today())), &apos;Complete&apos;, If(Date_Of_Event__c &gt;today() ,&apos;Upcoming&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Event Status</label>
    <type>Text</type>
</CustomField>