force-app/main/default/objects/Events__c/fields/Final_Venue_Selected__c.field-meta.xml
<CustomField>
    <fullName>Final_Venue_Selected__c</fullName>
    <description>To Enter Hotel Name and Address, only allowed for GM Hospitality &amp; System Administrator Profile users</description>
    <label>Final Venue</label>
    <type>TextArea</type>
</CustomField>