force-app/main/default/objects/Events__c/fields/Focus_Project__c.field-meta.xml
<CustomField>
    <fullName>Focus_Project__c</fullName>
    <label>Focus Project</label>
    <type>TextArea</type>
</CustomField>