force-app/main/default/objects/Events__c/fields/From_Broker_Portal__c.field-meta.xml
<CustomField>
    <fullName>From_Broker_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Broker Portal</label>
    <type>Checkbox</type>
</CustomField>