force-app/main/default/objects/Events__c/fields/HOTEL2__c.field-meta.xml
<CustomField>
    <fullName>HOTEL2__c</fullName>
    <label>HOTEL2:</label>
    <type>TextArea</type>
</CustomField>