force-app/main/default/objects/Events__c/fields/Is_Next_Approver_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_Approver_Active__c</fullName>
    <formula>Next_Approver__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Next Approver Active?</label>
    <type>Checkbox</type>
</CustomField>