force-app/main/default/objects/Events__c/fields/Is_the_part_of_a_current_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Is_the_part_of_a_current_Underwriting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the part of a current Underwriting ?</label>
    <type>Checkbox</type>
</CustomField>