force-app/main/default/objects/Events__c/fields/Last_date_of_CRM_meeting_with_Broker__c.field-meta.xml
<CustomField>
    <fullName>Last_date_of_CRM_meeting_with_Broker__c</fullName>
    <label>Last date of CRM meeting with Broker</label>
    <type>Date</type>
</CustomField>