force-app/main/default/objects/Events__c/fields/Marketing_Support_Required_Brochures_etc__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Support_Required_Brochures_etc__c</fullName>
    <label>Marketing Support Required Brochures etc</label>
    <type>TextArea</type>
</CustomField>