force-app/main/default/objects/Events__c/fields/Meeting_line_up__c.field-meta.xml
<CustomField>
    <fullName>Meeting_line_up__c</fullName>
    <label>Meeting line up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Channel Partner</fullName>
            </value>
            <value>
                <fullName>Multiple Channel Partner</fullName>
            </value>
            <value>
                <fullName>Channel Partner with Customer</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>