force-app/main/default/objects/Events__c/fields/Next_Approver__c.field-meta.xml
<CustomField>
    <fullName>Next_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events9</relationshipName>
    <type>Lookup</type>
</CustomField>