force-app/main/default/objects/Events__c/fields/Next_Approver_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Next_Approver_Is_Active__c</fullName>
    <formula>Next_Approver__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Approver Is Active ?</label>
    <type>Checkbox</type>
</CustomField>