force-app/main/default/objects/Events__c/fields/No_Action_Notify__c.field-meta.xml
<CustomField>
    <fullName>No_Action_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Action Notify</label>
    <type>Checkbox</type>
</CustomField>