force-app/main/default/objects/Events__c/fields/No_of_participant_from_Sobha__c.field-meta.xml
<CustomField>
    <fullName>No_of_participant_from_Sobha__c</fullName>
    <label>No of participant from Sobha:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>