force-app/main/default/objects/Events__c/fields/No_Of_Pax_Attending__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Pax_Attending__c</fullName>
    <description>only for video shoot</description>
    <label>No. Of Pax. Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>