force-app/main/default/objects/Events__c/fields/No_of_Sale_This_Year_Calculated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sale_This_Year_Calculated__c</fullName>
    <label>No of Sale This Year Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>