force-app/main/default/objects/Events__c/fields/No_of_Sales_In_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sales_In_Last_Year__c</fullName>
    <formula>No_of_Site_VIsits_In_Last_Year_Calculate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.of Site VIsits In Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>