force-app/main/default/objects/Events__c/fields/No_of_Site_visits_In_Last__c.field-meta.xml
<CustomField>
    <fullName>No_of_Site_visits_In_Last__c</fullName>
    <formula>No_Of_Sale_Last_Year_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales In Last Year (in Mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>