force-app/main/default/objects/Events__c/fields/No_of_Site_VIsits_This_Year_calculat__c.field-meta.xml
<CustomField>
    <fullName>No_of_Site_VIsits_This_Year_calculat__c</fullName>
    <label>No.of Site VIsits This Year calculat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>