force-app/main/default/objects/Events__c/fields/No_Video_Reminder_After_7_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Video_Reminder_After_7_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Video Reminder After 7 Days</label>
    <type>Checkbox</type>
</CustomField>