force-app/main/default/objects/Events__c/fields/Number_of_People_Attending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People_Attending__c</fullName>
    <label>Number of People Attending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>