force-app/main/default/objects/Events__c/fields/Old_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_End_Date__c</fullName>
    <label>Old End Date</label>
    <type>Date</type>
</CustomField>