force-app/main/default/objects/Events__c/fields/Old_Start_Time_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Old_Start_Time_Of_Event__c</fullName>
    <label>Old Start Time Of Event</label>
    <type>Time</type>
</CustomField>