force-app/main/default/objects/Events__c/fields/Plan_of_Business_Trip__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_Business_Trip__c</fullName>
    <label>Plan of Business Trip</label>
    <type>TextArea</type>
</CustomField>