force-app/main/default/objects/Events__c/fields/Qualified_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Sales_Value__c</fullName>
    <formula>No_of_Sale_This_Year_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales This Year (In Mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>