force-app/main/default/objects/Events__c/fields/Remaining_Days_in_Event__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days_in_Event__c</fullName>
    <formula>Date_Of_Event__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days in Event</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>